ARM/1.0-Landing-Zone/1.0-Landing-Zone.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "Company_Prefix":{
      "type": "string",
      "defaultValue": "XXX",
      "metadata": {
        "description": "Abbreviation of the company name"
      }
    },
    "Environment" :{
      "type": "string",
      "defaultValue": "TEST",
      "metadata": {
        "description": "Dev, Test, Prod, Training...etc"
      }
    },
    "Deploy_VPN_Gateway":{
      "type":"string",
      "defaultValue":"No",
      "allowedValues":[
        "Yes",
        "No"
      ],
      "metadata":{
        "description":"Whether or not to deploy a VPN Gateway in the Hub vNET"
      }
    },
    "Deploy_AADDS_Subnet":{
      "type":"string",
      "defaultValue":"No",
      "allowedValues":[
        "Yes",
        "No"
      ],
      "metadata":{
        "description":"Whether or not to deploy an instance of Azure Active Directory Domain Services in the Hub vNET"
      }
    },
    "HubvNet_AddressPrefix": {
      "type": "string",
      "defaultValue": "10.10.0.0/24",
      "metadata": {
        "description": "Address prefix for HUB vNet"
      }
    },
    "HubvNet_GatewaySubnet_Prefix": {
      "type": "string",
      "defaultValue": "10.10.0.0/29",
      "metadata": {
        "description": "GatewaySubnet"
      }
    },
    "HubvNet_GatewaySubnet_Name": {
      "type": "string",
      "defaultValue": "GatewaySubnet",
      "metadata": {
        "description": "Gateway Subnet used for hooking in a S2S and P2S VPN into your vNet"
      }
    },
    "HubvNet_AzureLoadBalancer_Prefix": {
      "type": "string",
      "defaultValue": "10.10.0.8/29",
      "metadata": {
        "description": "AzureLoadBalancer"
      }
    },
    "HubvNet_AzureLoadBalancer_Name": {
      "type": "string",
      "defaultValue": "AzureLoadBalancer",
      "metadata": {
        "description": "AzureLoadBalancer Subnet used for hooking presenting load balancing within the Hub vNet"
      }
    },
    "HubvNet_AzureFirewallSubnet_Prefix": {
      "type": "string",
      "defaultValue": "10.10.0.16/29",
      "metadata": {
        "description": "AzureFirewallSubnet"
      }
    },
    "HubvNet_AzureFirewallSubnet_Name": {
      "type": "string",
      "defaultValue": "AzureFirewallSubnet",
      "metadata": {
        "description": "Azure Firewall Subnet used for protecting external services within the subscription."
      }
    },
    "HubvNet_AADDS_Prefix": {
      "type": "string",
      "defaultValue": "10.10.0.32/28",
      "metadata": {
        "description": "Azure Active Directory Domain Services"
      }
    },
    "HubvNet_AADDS_Name": {
      "type": "string",
      "defaultValue": "AADDS",
      "metadata": {
        "description": "Azure Active Directory Domain Services Subnet used for hosting an instance of Azure ADDS."
      }
    },
    "HubvNet_InfrastructureServices_Prefix": {
      "type": "string",
      "defaultValue": "10.10.0.128/25",
      "metadata": {
        "description": "Infrastructure Services"
      }
    },
    "HubvNet_InfrastructureServices_Name": {
      "type": "string",
      "defaultValue": "InfrastructureServices",
      "metadata": {
        "description": "Infrastructure Services Subnet used for hosting shared services used within the subscription."
      }
    },
    "SpokevNet_AddressPrefix": {
      "type": "string",
      "defaultValue": "10.10.1.0/24",
      "metadata": {
        "description": "Address prefix for SPOKE vNet"
      }
    },
    "SpokevNet_AzureLoadBalancer_Prefix": {
      "type": "string",
      "defaultValue": "10.10.1.8/29",
      "metadata": {
        "description": "AzureLoadBalancer"
      }
    },
    "SpokevNet_AzureLoadBalancer_Name": {
      "type": "string",
      "defaultValue": "AzureLoadBalancer",
      "metadata": {
        "description": "AzureLoadBalancer Subnet used for hooking presenting load balancing within the Spoke vNet"
      }
    },
    "SpokevNet_Application1_Prefix": {
      "type": "string",
      "defaultValue": "10.10.1.128/25",
      "metadata": {
        "description": "Application"
      }
    },
    "SpokevNet_Application1_Name": {
      "type": "string",
      "defaultValue": "Application",
      "metadata": {
        "description": "Application Subnet used for hosting an application within the spoke vNet"
      }
    },
    "dnsServers": {
      "type": "array",
      "defaultValue": [
        "10.10.0.33",
        "10.10.0.34"
      ],
      "metadata": {
        "description": "DNS Server used within the vNets; typically these are the domain controllers."
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "gatewaySku":{
      "type":"string",
      "defaultValue":"Basic",
      "allowedValues":[
        "Basic",
        "VpnGw1",
        "VpnGw2",
        "VpnGw3"
      ],
      "metadata":{
        "description":"The SKU of the Gateway to be deployed; production deployments should use VPNGW#"
      }
    }
  },
  "variables": {
    "Deployment_Prefix": "[concat(toUpper(parameters('Company_Prefix')),'-',toUpper(parameters('location')),'-',toUpper(parameters('Environment')))]",
    "Network_Watcher": "[concat(variables('Deployment_Prefix'),'-NW')]",
    "HubvNet_Name": "[concat(variables('Deployment_Prefix'),'-HUB-VNET')]",
    "HubvNetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('HubvNet_Name'))]",
    "SpokevNetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('SpokevNet_Name'))]",
    "SpokevNet_Name": "[concat(variables('Deployment_Prefix'),'-SPOKE-VNET')]",
    "HubvNet_Peering_Name": "[concat(toUpper(variables('HubvNet_Name')),'-TO-',toUpper(variables('SpokevNet_Name')))]",
    "SpokevNet_Peering_Name": "[concat(toUpper(variables('SpokevNet_Name')),'-TO-',toUpper(variables('HubvNet_Name')))]",
    "Gateway_PIP_Name": "[concat(toUpper(variables('Deployment_Prefix')),'PIP-GW')]",
    "AADDS_NSG_Name": "[concat(toUpper(parameters('HubvNet_AADDS_Name')), '-NSG')]",
    "NSG_Id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('AADDS_NSG_Name'))]"
  },
  "resources": [
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/networkWatchers",
      "name": "[variables('Network_Watcher')]",
      "location": "[parameters('location')]",
      "Properties": {

      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('HubvNet_Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('HubvNet_AddressPrefix')]"
          ]
        },
        "dhcpOptions":{
          "dnsServers": "[parameters('dnsServers')]"
        },
        "enableDdosProtection":false,
        "enableVmProtection":false
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "location": "[parameters('location')]",
      "name": "[concat(variables('HubvNet_Name'),'/',parameters('HubvNet_GatewaySubnet_Name'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('HubvNet_Name'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('HubvNet_GatewaySubnet_Prefix')]"
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "location": "[parameters('location')]",
      "name": "[concat(variables('HubvNet_Name'),'/',parameters('HubvNet_AzureLoadBalancer_Name'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('HubvNet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_GatewaySubnet_Name'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('HubvNet_AzureLoadBalancer_Prefix')]"
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "location": "[parameters('location')]",
      "name": "[concat(variables('HubvNet_Name'),'/',parameters('HubvNet_AzureFirewallSubnet_Name'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('HubvNet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_GatewaySubnet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_AzureLoadBalancer_Name'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('HubvNet_AzureFirewallSubnet_Prefix')]"
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "location": "[parameters('location')]",
      "name": "[concat(variables('HubvNet_Name'),'/',parameters('HubvNet_InfrastructureServices_Name'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('HubvNet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_GatewaySubnet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_AzureLoadBalancer_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_AzureFirewallSubnet_Name'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('HubvNet_InfrastructureServices_Prefix')]"
      }
    },
    {
      "condition":"[equals(parameters('Deploy_AADDS_Subnet'), 'Yes')]",
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "location": "[parameters('location')]",
      "name": "[concat(variables('HubvNet_Name'),'/',parameters('HubvNet_AADDS_Name'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('HubvNet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_GatewaySubnet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_AzureLoadBalancer_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_AzureFirewallSubnet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'),parameters('HubvNet_InfrastructureServices_Name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups',variables('AADDS_NSG_Name'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('HubvNet_AADDS_Prefix')]",
        "networkSecurityGroup": {
          "id": "[variables('NSG_Id')]"
        }
      }
    },
    {
      "condition":"[equals(parameters('Deploy_AADDS_Subnet'), 'Yes')]",
      "apiVersion": "2018-10-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('AADDS_NSG_Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowPSRemoting",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5986",
              "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 301,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowRDP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "CorpNetSaw",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowSyncWithAzureAD",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "AzureActiveDirectoryDomainServices",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }  
          }
        ]
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('SpokevNet_Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('SpokevNet_AddressPrefix')]"
          ]
        },
        "dhcpOptions":{
          "dnsServers": "[parameters('dnsServers')]"
        },
        "enableDdosProtection":false,
        "enableVmProtection":false
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "location": "[parameters('location')]",
      "name": "[concat(variables('SpokevNet_Name'),'/',parameters('SpokevNet_AzureLoadBalancer_Name'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('SpokevNet_Name'))]"    
      ],
      "properties": {
        "addressPrefix": "[parameters('SpokevNet_AzureLoadBalancer_Prefix')]"
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "location": "[parameters('location')]",
      "name": "[concat(variables('SpokevNet_Name'),'/',parameters('SpokevNet_Application1_Name'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('SpokevNet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('SpokevNet_Name'),parameters('SpokevNet_AzureLoadBalancer_Name'))]"
      ],
      "properties": {
        "addressPrefix": "[parameters('SpokevNet_Application1_Prefix')]"
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat(variables('HubvNet_Name'),'/peering_',variables('HubvNet_Peering_Name'))]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('HubvNet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('SpokevNet_Name'))]"
      ],
      "properties": {
        "allowVirtualNetworkAccess":true,
        "allowForwardedTraffic":true,
        "allowGatewayTransit":false,
        "useRemoteGateways":false,
        "remoteVirtualNetwork":{
          "id":"[variables('SpokevNetId')]"
        }
      }
    },
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat(variables('SpokevNet_Name'),'/peering_',variables('SpokevNet_Peering_Name'))]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('HubvNet_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('SpokevNet_Name'))]"
      ],
      "properties": {
        "allowVirtualNetworkAccess":true,
        "allowForwardedTraffic":true,
        "allowGatewayTransit":false,
        "useRemoteGateways":false,
        "remoteVirtualNetwork":{
          "id":"[variables('HubvNetId')]"
        }
      }
    },
    {
      "condition":"[equals(parameters('Deploy_VPN_Gateway'), 'Yes')]",
      "apiVersion":"2018-02-01",
      "type":"Microsoft.Network/publicIPAddresses",
      "name":"[variables('Gateway_PIP_Name')]",
      "location":"[parameters('location')]",
      "properties":{
        "publicIPAllocationMethod":"Dynamic"
      }
    },
    {
      "condition":"[equals(parameters('Deploy_VPN_Gateway'), 'Yes')]",
      "apiVersion":"2019-11-01",
      "type":"Microsoft.Network/virtualNetworkGateways",
      "name":"[variables('Gateway_PIP_Name')]",
      "location":"[parameters('location')]",
      "dependsOn":[
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('Gateway_PIP_Name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('HubvNet_Name'), parameters('HubvNet_GatewaySubnet_Name'))]"
      ],
      "properties":{
        "ipConfigurations":[
          {
            "properties":{
              "privateIPAllocationMethod":"Dynamic",
              "subnet":{
                "id":"[resourceId('Microsoft.Network/virtualNetworkGateways', parameters('HubvNet_GatewaySubnet_Name'))]"
              },
              "publicIPAddress":{
                "id":"[resourceId('Microsoft.Network/publicIPAddresses', variables('Gateway_PIP_Name'))]"
              }
            },
            "name":"vnetGatewayConfig"
          }
        ],
        "sku":{
          "name":"[parameters('gatewaySku')]",
          "tier":"[parameters('gatewaySku')]"
        },
        "gatewayType":"Vpn",
        "vpnType":"RouteBased",
        "enableBgp":false
      }
    }
  ],
  "outputs": {

  }
}
